@@ -1,3 +1,11 @@
+2006-11-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-02-08
+	* fix the way the internal fed buffers are filled in PLAYBACK
+	mode. It wouldn't have worked for more than 64 feds (so it
+	doesn't matter much for MTCC I/II data)
+	
+
 2006-11-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-02-07
